# weather-anomaly-

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  exploration_results.md  plan.md  pyproject.toml  requirements.txt
notebooks/: exploration.ipynb
src/data/: fetch.py  injest.py
src/utils/: config.py
tests/data/: test_fetch.py
